// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute MaticX endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 47732197,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 47732197,
  "statusCode": 200,
}
`;

exports[`execute sFTMx endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 26263763,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 26263763,
  "statusCode": 200,
}
`;
